--- a/project4/network/templates/network/index.html
+++ b/project4/network/templates/network/index.html
@@ -47,11 +47,11 @@
                             </div>
                         </div>
                     {% else %}
-                        <div class="like-unlike-buttons">
-                            <button class="btn btn-success" onclick="toggleLike({{ post.id }})" id="like-btn-{{ post.id }}">
-                                Like <i class="fa fa-thumbs-up"></i>
-                                <span id="like-count-{{ post.id }}">{{ post.likes.count }}</span>
-                            </button>
+                        <div class="like-button" id="like-button" data-liked="false" data-post-id="1">
+                            <svg viewBox="0 0 24 24" class="heart-icon">
+                                <path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
+                            </svg>
+                            <span class="like-count">0</span>
                         </div>
                     {% endif %}
                 {% endif %}
